fix home icon clipping

--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -17,6 +17,7 @@ header #logo img {
 #head-nav ul {
   list-style:none;
   padding: 0;
+  margin-left:15px;
 }
 
 #head-nav ul li{
@@ -27,7 +28,8 @@ header #logo img {
   color:#3F4344;
 	font-weight:normal;
 	font-size:16px;
-	display:inline-block
+	display:inline-block;
+  text-decoration:none;
 }
 
 #head-nav ul li span {
@@ -37,7 +39,13 @@ header #logo img {
   border-top: 0;
 }
 
-
+#head-nav #nav-menu-item-home {
+  height: 20px;
+  width: 20px;
+  overflow: hidden;
+  margin-top: 15px;
+  margin-right: 15px;
+}
 
 
 
